# ai_powdered_automated_answersheet_evaluation_system

./: .gitignore  README.md  railway.json  render.yaml
backend/: .env.example  README.md  app.db  pyproject.toml
backend/answer_sheet_eval_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: capture.py  grading.py  schemas.py  sheets.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/services/: capture_pipeline.py  grading.py  sheet_generator.py
backend/tests/: test_capture.py  test_grading.py  test_sheet_generation.py
docs/: architecture.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/css/app/: layout.css
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/manual-review/: page.tsx
frontend/app/student/: page.tsx
frontend/components/: StudentDashboard.tsx  TeacherDashboard.tsx
frontend/lib/: api.ts
