[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "answer-sheet-eval-backend"
version = "0.1.0"
description = "Backend API for AI-powered answer sheet evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "opencv-python-headless>=4.10.0.84",
  "requests>=2.32.3",
  "qrcode[pil]>=7.4.0",
  "jinja2>=3.1.4",
  "weasyprint>=62.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]

[tool.setuptools]
packages = ["app"]
